2001-08-14  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Invoke an editor automatically when
	the faq-edit, get-edit, info-edit, or intro-edit commands
	are used.

	* bin/mj_wwwadm:  Add support for the newfaq, newinfo, newintro,
	and put commands.  Use format files with the faq, get, info, and 
	intro commands.

	* bin/mj_wwwusr:  Use format files with the faq, info, and intro
	commands.  Support the hidepost personal setting.

	* lib/Majordomo.pm:  Version number is now 0.1200108140.
	(_get, _put, _index)  Improve error checking on file names.
	(_get)  Make use of substitutions in the file_sent file.
	(_faq, _info, _intro)  Add support for the "edit" command mode.
	This will, for example, wrap the faq document in a newfaq
	command to make editing and replacing the document easier.
	(_put)  Add support for the "delete" command mode, which
	will remove files or empty directories, and the "force"
	command mode, which will recursively delete directories.
	(_archive) Add support for the "hidden" command mode, which
	displays only hidden messages (those that were posted by
	people with the "hidepost" flag set, for example).
	(archive_chunk)  Change the use of the "delete" command mode
	to avoid deleting messages from the archive that are awaiting
	delivery in a digest unless the "force" command mode is also used.  
	This allows the archive-delete-hidden command to be used to 
	clean "hidden" messages from the archive using a trigger.
	(_set)  Bugfix:  do not send a partial digest of messages
	if no messages are scheduled for delivery.  Also, use
	only the message numbers in constructing the digest, to
	cause the correct information to be extracted.

	* lib/mj_cf_data.pl, mj_cf_defs.pl:  Add support for the "mail" 
	delivery class, the "hidepost" personal setting, and the 
	noarchive_body and noarchive_headers configuration settings.

	* lib/Mj/Archive.pm:  Add the "hidden" field to the archive
	database, which indicates whether or not a message should be